--- a/application/pom.xml
+++ b/application/pom.xml
@@ -167,5 +167,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>ehrbase</finalName>
     </build>
 </project>
