--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -22,7 +22,7 @@ jobs:
       id: docker_meta
       uses: docker/metadata-action@v3
       with:
-        images: ${{ env.IMAGES }}
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
     
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
