--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -34,8 +34,8 @@ jobs:
       uses: docker/login-action@v1 
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{secrets.DOCKER_USERNAME}}
-        password: ${{secrets.DOCKER_PASSWORD}}
+        username: ${{ env.USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
     
     - name: Set up JDK 11
       uses: actions/setup-java@v2
